# anki-FlashcardForge

./: .gitignore  DOCUMENT_CARD_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
scripts/: build.ps1  render_anki_preview.py
src/flashforge/: __init__.py  __main__.py  anki.py  app.py  config.py  document.py  llm.py  models.py  ocr.py  pipeline.py  prompts.py  resources.py  screenshot.py  secrets.py  socratopia.py  theme.py  ui.py
src/flashforge/prompts/: cloze_focused.md  deep_concept.md  default_adaptive.md  exam_mode.md
src/flashforge/ui/: __init__.py  editor.py  highlight.py  main_window.py  socratopia_dialog.py  workers.py
tests/: test_anki.py  test_app.py  test_build_script.py  test_config.py  test_document.py  test_llm.py  test_models.py  test_ocr.py  test_pipeline.py  test_prompts.py  test_resources.py  test_screenshot.py  test_socratopia.py  test_theme.py  test_ui.py
