[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "flashforge"
version = "0.1.0"
description = "Open-source AI-assisted Anki card creator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "FlashForge contributors"}]
dependencies = [
  "PySide6>=6.7",
  "openai>=1.40",
  "httpx>=0.27",
  "keyboard>=0.13",
  "keyring>=25.0",
  "mss>=9.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ocr = ["rapidocr-onnxruntime>=1.3; python_version >= '3.12' and python_version < '3.13'"]
build = ["pyinstaller>=6.10"]

[project.scripts]
flashforge = "flashforge.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flashforge = ["prompts/*.md", "assets/*.svg", "assets/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
